syntax = "proto3";

package kuma.mesh.v1alpha1;

option go_package = "github.com/kumahq/kuma/api/mesh/v1alpha1";

import "mesh/v1alpha1/metrics.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/wrappers.proto";
import "validate/validate.proto";

// ZoneIngress allows us to configure dataplane in the Ingress mode. In this
// mode, dataplane has only inbound interfaces. Every inbound interface matches
// with services that reside in that cluster.
message ZoneIngress {
  // Address on which inbound listener will be exposed
  string address = 1;

  // AdvertisedAddress defines IP or DNS name on which ZoneIngress is accessible
  // to other Kuma clusters.
  string advertisedAddress = 2;

  // Port of the inbound interface that will forward requests to the service.
  uint32 port = 3;

  // AdvertisedPort defines port on which ZoneIngress is accessible to other
  // Kuma clusters.
  uint32 advertisedPort = 4;

  // AvailableService contains tags that represent unique subset of
  // endpoints
  message AvailableService {
    // tags of the service
    map<string, string> tags = 1;
    // number of instances available for given tags
    uint32 instances = 2;
    // mesh of the instances available for given tags
    string mesh = 3;
  }
  repeated AvailableService availableServices = 5;
}
